fixed console errors with select component + align-items in flex containers

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -286,7 +286,6 @@ button:hover {
   font-size: 1.5em;
   margin: 0;
   justify-content: left;
-  align-items: left;
   text-align: left;
   width: 33%;
   min-width: 33%;
